--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -24,7 +24,7 @@ h1, h2, h3 {
 
 .logo-text {
   margin: 0.5rem; 
-  max-width: 40%;  
+  max-width: 50%;  
 }
 
 .logo-big {
